correction mobile query

--- a/styles/style.css
+++ b/styles/style.css
@@ -126,16 +126,35 @@ body{
       .player-details{
           display: grid;
           grid-template-columns: repeat(2, 1fr);
-          padding-left: 200px;
+          padding-left: 50px;
           position: relative;
       }
       .extra-part{
           display: flex;
-          flex-direction: column;
+          flex-direction: row;
+          padding-left: 50px;
       }
+      .love-club, .love-football{
+        width: 600px;
+        height: 500px;
+        padding: 10px;
+        margin: 10px;
+        border: 5px solid wheat;
+        flex-wrap: nowrap;
+      }
+      .love-football  img{
+        width: 300px;
+        height: 200px;
+    }
+    .love-club img{
+        width: 300px;
+        height: 200px;
+    }
       .last-part{
-          display: none;
-      }
+        display: block;
+        text-align: center;
+    }
+    
 
   }
 
